--- a/clientside/src/components/Button/Button.module.css
+++ b/clientside/src/components/Button/Button.module.css
@@ -3,7 +3,7 @@
     padding: 1rem 2rem;
     border: 1px solid var(--icons-color);
     font-size: 1.1rem;
-    /* color: var(--shadow-light-color); */
+    color: var(--shadow-light-color);
     color: aliceblue;
     cursor: pointer;
     transition: all .2s ease-in;
