--- a/clientside/src/components/Footer/Footer.module.css
+++ b/clientside/src/components/Footer/Footer.module.css
@@ -1,6 +1,7 @@
                                                 /* Footer.module.css */
 
 .footer {
+    margin-top: 3.5rem;
     background-color: #2c3e50;
     color: white;
     padding: 20px 0;
@@ -8,13 +9,15 @@
 }
 
 .footer_container {
+    width: 100%;
+    padding-block: 1.5rem;
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
     flex-wrap: wrap;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 1rem;
 }
 
 .footer_section {
