--- a/clientside/src/components/MainSection/MainSection.module.css
+++ b/clientside/src/components/MainSection/MainSection.module.css
@@ -14,6 +14,11 @@
 
 }
 
+.mainsection_box_right{
+    padding-right: 6rem;
+
+}
+
 .mainsection_box_left h1{
     font-size: 5rem;
     line-height: 1;
