--- a/clientside/src/components/NavBar/NavBar.module.css
+++ b/clientside/src/components/NavBar/NavBar.module.css
@@ -78,19 +78,32 @@
     margin-right: 20px;
     cursor: pointer;
 }
+.navbar_container_right_discover p,
+.navbar_container_right_help p {
+    position: relative;
+    align-items: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    cursor: pointer;
+}
 
-/* .navbar_container_right_discover:hover{
-    border-radius: 3rem;
+.navbar_container_right_discover:hover,
+.navbar_container_right_help:hover {
+    border: 1px solid var(--icons-color);
+    padding: .5rem .1rem;
+    border-radius: 2rem;
     background-color: var(--main-bg-color);
-    border: 1px solid var(--icons-color)
-} */
+    color: var(--icons-color);
+    box-shadow: var(--box-shadow);
+    cursor: pointer;
+}
 
 
 .navbar_container_right_discover_box,
 .navbar_container_right_help_box {
     position: absolute;
     padding: 1rem .5rem;
-    /* box-shadow: var(--box-shadow); */
+    box-shadow: var(--box-shadow);
     font-size: 1rem;
     width: 15rem;
     border-radius: 1rem;
