--- a/clientside/src/components/NavBar/NavBar.module.css
+++ b/clientside/src/components/NavBar/NavBar.module.css
@@ -63,7 +63,7 @@
 .navbar_container_right{
     /* margin: auto; */
     display: grid;
-    grid-template-columns: 2fr 2fr .5fr 1fr .3fr;
+    grid-template-columns: 2fr 2fr .3fr .5fr 1fr .3fr;
     gap: 1rem;
     align-items: center;
     /* align-self: flex-end; */
@@ -113,6 +113,12 @@
 
 /* Notification */
 .navbar_container_right_notify {
+    position: relative;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+.navbar_container_right_toggle {
     position: relative;
     cursor: pointer;
     margin-right: 20px;
@@ -194,6 +200,7 @@
     .navbar_container_left_box_input_box,
     .navbar_container_right_discover,
     .navbar_container_right_help,
+    .navbar_container_right_toggle,
     .navbar_container_right_button {
         display: none;
     }
