--- a/clientside/src/styles/global.css
+++ b/clientside/src/styles/global.css
@@ -1,20 +1,37 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-:root{
-  --icons-color: #4c5773;
-  --icons-light-color: #4c577341;
-  --icons-bg-color: #e2e6e9;
-  --shadow-dark-color: #d3dae7;
-  --shadow-light-color: #fff;
-  --main-bg-color: #ecf0f3;
+:root {
+    --icons-color: #4c5773;
+    --icons-light-color: #4c577341;
+    --icons-bg-color: #e2e6e9;
+    --shadow-dark-color: #d3dae7;
+    --shadow-light-color: #fff;
+    --main-bg-color: #ecf0f3;
 
-  --box-shadow: 1rem 1rem 1rem var(--shadow-dark-color),
-  -1rem -1rem 1rem var(--shadow-light-color);
+    --box-shadow: 1rem 1rem 1rem var(--shadow-dark-color),
+    -1rem -1rem 1rem var(--shadow-light-color);
 
-  --box-shadow-2: 0rem 0rem 0rem var(--shadow-dark-color),
-  -.3rem -.3rem 1rem var(--shadow-dark-color)
+    --box-shadow-2: 0rem 0rem 0rem var(--shadow-dark-color),
+    -.3rem -.3rem 1rem var(--shadow-dark-color);
+}
 
+[data-theme='dark'] {
+    --icons-color: #ffffff;
+    --icons-light-color: #ffffff41;
+    --icons-bg-color: #2c2c2c;
+    --shadow-dark-color: #000000;
+    --shadow-light-color: #333333;
+    --main-bg-color: #1e1e1e;
+}
+
+[data-theme='light'] {
+    --icons-color: #4c5773;
+    --icons-light-color: #4c577341;
+    --icons-bg-color: #e2e6e9;
+    --shadow-dark-color: #d3dae7;
+    --shadow-light-color: #fff;
+    --main-bg-color: #ecf0f3;
 }
 
 html,
