--- a/clientside/src/components/BackToTopButton/BackToTopButton.module.css
+++ b/clientside/src/components/BackToTopButton/BackToTopButton.module.css
@@ -8,8 +8,8 @@
 .backToTopButton {
     width: 50px;
     height: 50px;
-    background-color: #007BFF;
-    color: white;
+    background-color: var(--icons-color);
+    color: var(--icons-bg-color);
     border-radius: 50%;
     display: flex;
     align-items: center;
