--- a/clientside/src/components/Banner/Banner.module.css
+++ b/clientside/src/components/Banner/Banner.module.css
@@ -1,4 +1,4 @@
-.banner {
+/* .banner {
     position: relative;
     width: 100%;
     height: 300px;
@@ -9,6 +9,19 @@
     justify-content: center;
     color: white;
     text-align: center;
+} */
+
+.banner_img_mobile{
+    display: none;
+}
+
+@media screen and (max-width: 35em) {
+    .banner_img_mobile{
+        display: block;
+    }
+    .banner{
+        display: none;
+    }
 }
 
 .overlay {
