--- a/clientside/src/pages/authorPage/AuthorProfileCard/AuthorProfileCard.module.css
+++ b/clientside/src/pages/authorPage/AuthorProfileCard/AuthorProfileCard.module.css
@@ -1,17 +1,24 @@
 .AuthorProfileCard {
-    background-color: var(--main-bg-color);
+
     border-radius: 10px;
     box-shadow: var(--box-shadow);
-    padding: 20px;
     width: 100%;
     max-width: 400px;
     margin: 0 auto;
+    margin-top: 5rem;
+    z-index: 22222;
 }
 
 .AuthorProfileCard_box {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    width: 80%;
+    margin: 0 auto;
+    grid-template-columns: 1fr 4fr 1.3fr;
     align-items: center;
+    background-color: var(--main-bg-color);
+    gap: 3rem;
+    padding: 2.5rem 2rem;
+    border-radius: 1rem;
     text-align: center;
 }
 
@@ -20,57 +27,75 @@
 }
 
 .AuthorProfileCard_box_img_img {
-    border-radius: 50%;
+    border-radius: 1rem;
 }
 
 .AuthorProfileCard_box_info h2 {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-size: 1.5rem;
-    margin-bottom: 10px;
+    line-height: 0;
+    margin-top: -.5rem;
+    font-size: 2.5rem;
+    /* margin-bottom: 10px; */
 }
 
 .AuthorProfileCard_box_info_address {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 10px;
+    margin-top: -1rem;
 }
 
 .AuthorProfileCard_box_info_address input {
     border: none;
-    background: none;
-    font-size: 0.875rem;
+    outline: none;
+    width: 35%;
+    background: transparent;
+    font-size: 1rem;
     color: var(--icons-color);
     text-align: center;
 }
 
 .copy_icon {
     cursor: pointer;
+    box-shadow: var(--box-shadow);
+    transition: all .3s ease-in;
     color: var(--icons-color);
+}
+
+.copy_icon:hover {
+    box-shadow: var(--box-shadow);
 }
 
 .AuthorProfileCard_box_info_social {
     display: flex;
-    gap: 10px;
-    margin-bottom: 20px;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1.5rem;
+    /* margin-bottom: 20px; */
 }
 
 .AuthorProfileCard_box_info_social a {
-    color: var(--icons-color);
-    font-size: 1.5rem;
-    transition: color 0.3s ease;
+    background-color: var(--icons-color);
+    color: var(--main-bg-color);
+    border-radius: 50%;
+    /* font-size: 1.5rem; */
+    display: grid;
+    padding: 0.5rem;
+    border: 1px solid var(--icons-color);
+    transition: all 0.3s ease;
+    cursor: pointer;
 }
 
 .AuthorProfileCard_box_info_social a:hover {
-    color: #000;
+    background-color: var(--main-bg-color);
+    color: var(--icons-color);
+    box-shadow: var(--box-shadow);
+    border: 1px solid var(--icons-color)
+
 }
 
 .AuthorProfileCard_box_share {
     display: flex;
     align-items: center;
-    gap: 10px;
+    align-self: start;
+    position: relative;
+    gap: 2rem;
 }
 
 .AuthorProfileCard_box_share_icon {
@@ -81,21 +106,25 @@
 
 .AuthorProfileCard_box_share_upload {
     position: absolute;
-    background-color: white;
+    background-color: var(--main-bg-color);
     box-shadow: var(--box-shadow);
     border-radius: 10px;
-    padding: 10px;
-    top: 60px;
-    right: 20px;
-    z-index: 10;
+    padding: .5rem;
+    width: 15rem;
+    left: 2rem;
+    top: 5rem;
+    z-index: 11111111;
 }
 
 .AuthorProfileCard_box_share_upload p {
     display: flex;
     align-items: center;
-    gap: 5px;
-    margin: 10px 0;
+    gap: 1rem;
+    line-height: 0;
+    padding: 0.3rem 0.5rem;
     cursor: pointer;
+    transition: all .3s ease-in;
+
 }
 
 .AuthorProfileCard_box_share_report {
