--- a/clientside/src/components/BackToTopButton/BackToTopButton.module.css
+++ b/clientside/src/components/BackToTopButton/BackToTopButton.module.css
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 40px;
     right: 40px;
-    z-index: 1000;
+    z-index: 55555555555555;
 }
 
 .backToTopButton {
