--- a/clientside/src/components/NavBar/ToggleTheme/ToggleTheme.module.css
+++ b/clientside/src/components/NavBar/ToggleTheme/ToggleTheme.module.css
@@ -1,4 +1,4 @@
-.toggleTheme {
+/* .toggleTheme {
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -14,4 +14,52 @@
 .icon {
     font-size: 1.5rem;
     color: var(--icons-color);
+} */
+
+.toggleTheme {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    position: relative;
+}
+
+.dark_mode_input {
+    display: none;
+}
+
+.dark_mode_label {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 50px;
+    height: 25px;
+    background-color: #ccc;
+    border-radius: 50px;
+    padding: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.dark_mode_label FaSun {
+    color: #f39c12;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.dark_mode_label FaMoon {
+    color: #3498db;
+    opacity: 1;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.dark_mode_input:checked + .dark_mode_label {
+    background-color: #2c3e50;
+}
+
+.dark_mode_input:checked + .dark_mode_label FaSun {
+    opacity: 1;
+}
+
+.dark_mode_input:checked + .dark_mode_label FaMoon {
+    opacity: 0;
 }
