--- a/clientside/src/components/NFTCard/NFTCard.module.css
+++ b/clientside/src/components/NFTCard/NFTCard.module.css
@@ -23,9 +23,11 @@
     box-shadow: var(--box-shadow-2);
 }
 
+
 .NFTCard_box:hover .NFTCard_box_img_img {
     transform: scale(1.05);
     border-radius: 1rem;
+    align-items: center;
     /* box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15); */
 }
 
