--- a/clientside/src/pages/UploadProduct/UploadForm.module.css
+++ b/clientside/src/pages/UploadProduct/UploadForm.module.css
@@ -1,40 +1,61 @@
+.upload {
+  width: 80%;
+}
+
 .form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .formGroup {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .formGroup label {
-    margin-bottom: 5px;
-    font-weight: bold;
+  margin-bottom: 5px;
+  font-weight: bold;
 }
 
-.formGroup input, .formGroup select {
-    padding: 10px;
-    border: 1px solid #cccccc;
-    border-radius: 5px;
+.formGroup input,
+.formGroup select {
+  padding: 10px;
+  border: 1px solid #cccccc;
+  border-radius: 5px;
 }
 
 .formActions {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 .button {
-    padding: 10px 20px;
-    border: none;
-    background-color: #4c5773;
-    color: #ffffff;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  padding: 10px 20px;
+  border: none;
+  background-color: #4c5773;
+  color: #ffffff;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .button:hover {
-    background-color: #3b4459;
+  background-color: #3b4459;
+}
+
+/* ======== */
+.upload_box_input_para {
+  padding: 0rem 1rem;
+}
+
+.upload_box_slider {
+  display: flex;
+  gap: 1rem;
+}
+.upload_box_slider {
+  border: 1px solid var(--icons-color);
+  border-radius: 1rem;
+  padding: 1rem;
+  cursor: pointer;
 }
