--- a/clientside/src/pages/UploadProduct/DropZone/DropZone.module.css
+++ b/clientside/src/pages/UploadProduct/DropZone/DropZone.module.css
@@ -1,25 +1,69 @@
+
 .DropZone {
-    border: 2px dashed #cccccc;
-    border-radius: 10px;
-    padding: 20px;
-    text-align: center;
-    cursor: pointer;
-    margin-bottom: 20px;
+  width: 100%;
+  margin-block: 3rem;
 }
 
-.preview {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 20px;
+.DropZone_box {
+  border: 5px dotted var(--icons-color);
+  border-radius: 1rem;
+  text-align: center;
+  cursor: pointer;
+  padding: 1rem;
 }
 
-.previewImage {
-    width: 100px;
-    height: 100px;
-    position: relative;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #dddddd;
-    border-radius: 10px;
-    overflow: hidden;
+.DropZone_box_input p {
+  line-height: 0;
+}
+
+.DropZone_box_input_img_img {
+  border-radius: 1rem;
+  filter: invert();
+}
+
+.DropZone_box_aside {
+    margin-top: 2rem;
+  padding: 2rem;
+  border: 3px dotted var(--icons-color);
+  border-radius: 1px;
+}
+
+.DropZone_box_aside_box {
+  display: grid;
+  grid-template-columns: 1.5fr 4fr;
+  gap: 3rem;
+}
+
+.DropZone_box_aside_box_preview p span {
+  font-size: 1.2rem;
+  font-weight: 700;
+  /* margin-left: 1rem; */
+  margin-inline: 2rem;
+}
+
+.DropZone_box_aside_box_preview_one {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+
+.DropZone_box_aside_box_preview_three {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+@media screen and (max-width: 35rem) {
+  .DropZone_box_aside_box {
+    grid-template-columns: 1fr;
+  }
+
+  .DropZone_box_aside_box_preview_one {
+    display: grid;
+    /* grid-template-columns: 1fr; */
+  }
+  .DropZone_box_aside_box_preview_three {
+    grid-template-columns: 1fr;
+  }
 }
