--- a/clientside/src/components/NavBar/ToggleTheme/ToggleTheme.module.css
+++ b/clientside/src/components/NavBar/ToggleTheme/ToggleTheme.module.css
@@ -16,7 +16,7 @@
     color: var(--icons-color);
 } */
 
-.toggleTheme {
+/* .toggleTheme {
     display: flex;
     align-items: center;
     cursor: pointer;
@@ -62,4 +62,53 @@
 
 .dark_mode_input:checked + .dark_mode_label FaMoon {
     opacity: 0;
+} */
+
+
+.toggleTheme {
+    position: relative;
+}
+
+.dark_mode_input {
+    opacity: 0;
+    position: absolute;
+}
+
+.dark_mode_label {
+    background-color: #111;
+    border-radius: 50px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+    position: relative;
+    gap: 0.4rem;
+    height: 13px;
+    width: 25px;
+    transform: scale(1.5);
+}
+
+.dark_mode_label .ball {
+    background-color: var(--icons-color);
+    border-radius: 50%;
+    position: absolute;
+    /* top: 1px; */
+    left: -1px;
+    height: 17px;
+    width: 17px;
+    transform: translateX(0px);
+    transition: transform 0.2s linear;
+}
+
+.dark_mode_input:checked + .dark_mode_label .ball {
+    transform: translateX(17px);
+}
+
+.icon {
+    color: #f1c40f;
+}
+
+.dark_mode_label:hover {
+    background-color: #333;
 }
