--- a/clientside/src/components/AuthForm/AuthForm.module.css
+++ b/clientside/src/components/AuthForm/AuthForm.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     gap: 20px;
     max-width: 400px;
-    margin: 0 auto;
+    margin: 3rem auto;
 }
 
 .inputGroup {
@@ -18,14 +18,14 @@
 
 .inputGroup input {
     width: 100%;
-    padding: 10px;
+    padding: 1rem;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: .5rem;
 }
 
 .passwordToggle {
     position: absolute;
-    top: 50%;
+    top: 70%;
     right: 10px;
     transform: translateY(-50%);
     cursor: pointer;
@@ -33,14 +33,15 @@
 
 .actionButtons {
     display: flex;
+    margin-top: 1rem;
     flex-direction: column;
-    gap: 10px;
+    gap: 1rem;
 }
 
 .loginButton, .registerButton {
     padding: 10px;
     border: none;
-    border-radius: 4px;
+    border-radius: 2rem;
     color: white;
     background-color: #007BFF;
     cursor: pointer;
@@ -64,3 +65,5 @@
 .forgotPassword:hover {
     color: #0056b3;
 }
+
+
