--- a/clientside/src/styles/auth.module.css
+++ b/clientside/src/styles/auth.module.css
@@ -1,7 +1,7 @@
 .authContainer {
     padding: 20px;
     max-width: 600px;
-    margin: 0 auto;
+    margin: 3rem auto;
     text-align: center;
 }
 
