--- a/clientside/src/components/Error/Error.module.css
+++ b/clientside/src/components/Error/Error.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 50;
+  z-index: 66666666;
 }
 
 .errorBox {
