--- a/clientside/src/components/Filter/Filter.module.css
+++ b/clientside/src/components/Filter/Filter.module.css
@@ -118,6 +118,10 @@
     margin-left: 10px;
 }
 
+.active_category {
+    color: var()
+}
+
 /* ========= FIRST BREAK POINT= ===== */
 @media screen and (min-device-width: 320px) and
 (max-device-width: 375px) {
